adlatus-ci-cd/cd/skeleton/base/SERVICE-APP/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: SERVICE-APP-service
  namespace: NAMESPACE
spec:
  selector:
    app: SERVICE-APP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
