adlatus-ci-cd/cd/skeleton/base/SERVICE-APP/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: SERVICE-APP-ingress
  namespace: NAMESPACE
  annotations:
    cert-manager.io/issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - SERVICE-APP.NAMESPACE.env.DOMAIN
      secretName: tls-secret
  rules:
    - host: SERVICE-APP.NAMESPACE.env.DOMAIN
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: SERVICE-APP-service-test
                port:
                  number: 80
